# telegram-drive-web

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
deploy/caddy/: Caddyfile
deploy/cloudflared/: README.md  config.yml.example
deploy/docker/: Dockerfile.server  Dockerfile.web  docker-compose.coolify.yml  docker-compose.yml  docker-entrypoint-server.sh  nginx.web.conf
deploy/nginx/: telegram-drive-web.conf
deploy/systemd/: telegram-drive-web.env  telegram-drive-web.service
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT_COOLIFY.md  DEPLOYMENT_LXC.md  DEPLOYMENT_SPLIT_CLOUDFLARED.md  MIGRATION_FROM_TAURI.md  SECURITY.md
server/: .env.example  Cargo.toml
server/src/: app_state.rs  config.rs  errors.rs  lib.rs  main.rs  tests.rs
server/src/domain/: dto.rs  mod.rs  models.rs
server/src/http/: mod.rs
server/src/http/middleware/: audit.rs  auth.rs  csrf.rs  logging.rs  mod.rs  peer_ip.rs  rate_limit.rs  request_id.rs
server/src/http/routes/: account.rs  admin.rs  app_auth.rs  bandwidth.rs  files.rs  folders.rs  forums.rs  health.rs  media.rs  metrics.rs  mod.rs  search.rs  telegram_auth.rs  uploads.rs
server/src/jobs/: cleanup.rs  mod.rs  reconnect.rs
server/src/services/: bandwidth.rs  bootstrap.rs  helpers.rs  mod.rs  previews.rs  streaming.rs  telegram_auth.rs  telegram_files.rs  telegram_folders.rs  telegram_forums.rs  upload_progress.rs  upload_queue.rs
server/src/storage/: app_db.rs  cache.rs  mod.rs  telegram_session.rs
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  types.ts
web/src/lib/: api.ts  (+2 more)
(+20 files in other folders)
